add Tenant, Company and Employee queries